--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <ul>
       <li><img src="img/books/Anandabodha.jpg" alt="Philosophy" class="book-cover">
         📘 <strong>Anandabodhayati: Life and Philosophy</strong></li>
-      <li><img src="img/books/essays.jpg" alt="Essays" class="book-cover">
+      <li><img src="img/books/Essays.jpg" alt="Essays" class="book-cover">
         📗 <strong>Essays on Modern Sanskrit poetry</strong></li>
       <li><img src="img/books/Research in Indology.jpg" alt="Indology" class="book-cover">
         📕 <strong>Research in Indology</strong></li>
