--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <nav>
       <a href="#research">Research Articles</a> |
       <a href="#books">Books</a> |
-      <a href="#contact">Awards</a> |
+      <a href="#Awards">Awards</a> |
       <a href="#contact">Contact</a>
 	
     </nav>
